2003-07-15  Gary Thomas  <gary@mlbassoc.com>

	* src/net/bootp.c: Use correct options for DHCP discover.  This has
	the added bonus that when BOOTP & GATEWAY options are enabled, then
	RedBoot can get it's address via normal DHCP.  Of course, DHCP leases
	will be ignored by RedBoot, so some caution is warranted.

	* include/net/net.h: 
	* src/net/arp.c (__arp_request): Allow ARP of self - used during
	initialization to "broadcast" that an IP address is in use.

	* src/net/net_io.c (net_init): When using a static IP, send an
	initial ARP to see if any other node is using this address.
	Also, some minor cosmetic cleanups to remove warnings.

2003-07-15  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/redboot_installing.sgml (AT91): Tell users to switch JP1
	(or SW1 for EB40) when installing, and warn them in no
	uncertain terms the consequences of failing to do so.

2003-07-01  Mark Salter  <msalter@redhat.com>

	* cdl/redboot.cdl (CYGBLD_BUILD_REDBOOT_WITH_MCOPY): New option.
	* src/mcopy.c: New file adding mcopy command.
	* doc/redboot_cmds.sgml: Add mcopy.

2003-06-26  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/redboot_installing.sgml: Clarify use of correct cables with
	serial ports with AT91 boards.

2003-06-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/redboot_cmds.sgml (IP): Clarify last change a bit and fix typos
	and markup.

2003-05-20  David Vrabel  <dvrabel@arcom.com>
2003-05-20  Ian Campbell  <icampbell@arcom.com>
 
	* src/net/net_io.c: Add the ability to specify a netmask length to
	the ip_address command
	* doc/redboot_cmds.sgml: Document the above.

2003-06-24  Jeroen Dobbelaere  <jeroen.dobbelaere@acunia.com>
2003-06-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/net/tftp_client.c: Define tftp_stream.last_good_block to
	permit downloads > 32MB.
	(tftp_ack): Allow last_good_block to wrap.
	(tftp_stream_read): Ditto.

	* src/net/bootp.c: Use correct DHCP message type for DHCPREQUEST.

2003-05-20  Mark Salter  <msalter@redhat.com>
